--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-pino-logger": "^7.0.0",
     "face-api.js": "^0.22.2",
     "firebase": "^10.4.0",
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
+    "node-env-run": "^4.0.2",
+    "nodemon": "^3.0.1",
+    "npm-run-all": "^4.1.5",
+    "pino-colada": "^2.2.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
@@ -19,6 +27,7 @@
     "react-scripts": "5.0.1",
     "react-webcam": "^7.1.1",
     "sweetalert2": "^11.7.31",
+    "twilio": "^4.18.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -26,8 +35,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node-env-run server --exec nodemon | pino-colada",
+    "dev": "run-p server"
   },
+  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": [
       "react-app",
