--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "face-api.js": "^0.22.2",
     "firebase": "^10.4.0",
     "js-cookie": "^3.0.5",
-    "moment": "^2.29.4",
     "node-env-run": "^4.0.2",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
@@ -29,7 +28,8 @@
     "sweetalert2": "^11.7.31",
     "twilio": "^4.18.1",
     "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
